Updated html and css files for styling

--- a/index.html
+++ b/index.html
@@ -264,8 +264,11 @@
           </div>
         </section>
       </main>
-      <footer>
-        <section class="grid grid-3-columns-1-2-2">
+      <footer class="footer-section">
+        <div class="footer-overlay"></div>
+        <!-- translucent overlay -->
+
+        <section class="grid grid-3-columns-1-2-2 footer-content">
           <div>
             <h3>More</h3>
             <ul>
@@ -310,8 +313,7 @@
                 >KeeDan204</a
               >
               and is
-              <a href="#" target="_blank"> open sourced on GitHub</a>
-              .
+              <a href="#" target="_blank">open sourced on GitHub</a>.
             </p>
           </div>
         </section>
